<resources>
    <string name="app_name">Sapp</string>

    <!-- TOAST MESSAGES STARTS HERE -->
    <string name="toast_no_connection">Could not reach SAPP API :(</string>
    <!-- TOAST MESSAGES ENDS HERE -->

    <!-- ACCOUNT SELECTION ACTIVITY STARTS HERE -->
    <string name="acc_no_accounts">Nothing to show, no accounts connected yet..</string>
    <string name="acc_new">Create new account</string>
    <string name="acc_existing">Add existing account</string>
    <!-- ACCOUNT SELECTION ACTIVITY ENDS HERE -->

    <!-- LOGIN ACTIVITY STARTS HERE -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="checkbox_name">Remember Me</string>
    <string name="login">Login</string>
    <!-- LOGIN ACTIVITY ENDS HERE -->

    <!-- ACC CREATION ACTIVITY STARTS HERE -->
    <string name="password2_hint">Repeat Password</string>
    <string name="create_button">Create My Account</string>
    <!-- ACC CREATION ACTIVITY ENDS HERE -->

    <!-- CONV SELECTION ACTIVITY STARTS HERE -->
    <string name="convsel_no_conv">Nothing to show, no conversations started yet..</string>
    <!-- CONV SELECTION ACTIVITY ENDS HERE -->

    <!-- NEW CONV SELECTION ACTIVITY STARTS HERE -->
    <string name="newconvsel_start_search">Use the searchbar to search for usernames..</string>
    <string name="newconvsel_less_3_chars">Need 3 or more characters to search..</string>
    <string name="newconvsel_no_matching_usernames">No matching usernames found..</string>
    <!-- NEW CONV SELECTION ACTIVITY ENDS HERE -->

    <!-- MESSENGER ACTIVITY STARTS HERE -->
    <string name="messenger_send_button">Send</string>
    <string name="messenger_edittext_hint">Enter message..</string>
    <!-- MESSENGER ACTIVITY ENDS HERE -->

    <!-- SETTINGS ACTIVITY STARTS HERE -->
    <string name="statisticsButton">Statistics</string>
    <string name="aboutButton">About</string>
    <string name="notificationsButton">Enable Notifications</string>
    <string name="editAccountButton">My Account</string>
    <!-- SETTINGS ACTIVITY ENDS HERE -->

    <!-- STATISTICS ACTIVITY STARTS HERE -->
    <string name="text_chart01">All logins this week so far</string>
    <string name="text_chart02">All messages this week so far</string>
    <!-- STATISTICS ACTIVITY ENDS HERE -->

    <!-- changePassword ACTIVITY STARTS HERE -->
    <string name="changpass_oldPass">Old password</string>
    <string name="changpass_newPass">New password</string>
    <string name="changpass_repeatNewPass">Repeat new password</string>
    <string name="changpass_changePassButton">Change Password</string>
    <!-- changePassword ACTIVITY ENDS HERE -->

    <!-- changeProfilePicture ACTIVITY STARTS HERE -->
    <string name="profilePicSelect">Select image</string>
    <string name="profilePicSubmit">Submit image</string>
    <string name="profilePicCrop">Crop image</string>
    <!-- changeProfilePicture ACTIVITY ENDS HERE -->

    <!-- About ACTIVITY STARTS HERE -->
    <string name="aboutAppTitle">SecureApp Messenger</string>
    <string name="aboutVersion">Version 1.01.22</string>
    <string name="aboutCopyright">© 2019 SAPP Inc.</string>
    <string name="aboutName1">Jasper Balster</string>
    <string name="aboutName2">Remon Hoogendijk</string>
    <!-- About ACTIVITY ENDS HERE -->

    <!-- Account ACTIVITY STARTS HERE -->
    <string name="changeQuoteHint">New Quote</string>
    <string name="changeQuoteDialogTitle">Change Quote</string>
    <string name="changePasswordHintOldPass">Old Password</string>
    <string name="changePasswordHintNewPass1">New Password</string>
    <string name="changePasswordHintNewPass2">Repeat Password</string>
    <string name="changePasswordDialogTitle">Change Password</string>
    <string name="dialogPositiveButton">Submit</string>
    <string name="dialogNegativeButton">Cancel</string>
    <!-- Account ACTIVITY ENDS HERE -->


    <!-- TOOLBAR SECTION STARTS HERE -->

    <!-- Toolbar Titles under here -->
    <string name="toolbar_title_account_selection">Account Selection</string>
    <string name="toolbar_title_login">Login</string>
    <string name="toolbar_title_account_creation">Create Account</string>
    <string name="toolbar_title_conv_selection">SAPP\'s</string>
    <string name="toolbar_title_newconv_selection">Search Username</string>
    <string name="toolbar_title_messenger">No username provided</string>
    <string name="toolbar_title_statistics">Statistics</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_changePass">Change password</string>
    <string name="toolbar_title_changeProfilePicture">Change Profile picture</string>
    <string name="toolbar_title_accEdit">My Account</string>

    <!-- Toolbar menu strings under here -->
    <string name="account_selection_refresh">Refresh</string>
    <string name="account_selection_about">About</string>
    <string name="conv_selection_refresh">Refresh</string>
    <string name="conv_selection_about">About</string>
    <string name="conv_selection_settings">Settings</string>
    <string name="conv_selection_logout">Logout</string>
    <string name="newconv_selection_search">Search Username</string>
    <string name="messenger_refresh">Refresh</string>

    <!-- TOOLBAR SECTION ENDS HERE -->

    <!-- NOTIFICATION SECTION STARTS HERE -->
    <string name="notification_channel_name">SAPP Notification Channel</string>
    <string name="notification_channel_desc">The official notification channel for SAPP</string>
    <!-- NOTIFICATION SECTION STARTS HERE -->
</resources>
