<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_convsel_refresh"
        android:title="@string/conv_selection_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_convsel_about"
        android:title="@string/conv_selection_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_convsel_settings"
        android:title="@string/conv_selection_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_convsel_logout"
        android:title="@string/conv_selection_logout"
        app:showAsAction="never" />

</menu>